--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "temp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,16 +13,26 @@
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-query-devtools": "^5.49.2",
+    "@types/byte-size": "^8.1.2",
+    "@types/js-cookie": "^3.0.6",
+    "@uiw/react-codemirror": "^4.23.0",
     "@vercel/analytics": "^1.3.1",
+    "byte-size": "^8.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "prettier-plugin-tailwindcss": "^0.6.5",
