--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query-devtools": "^5.49.2",
     "@types/byte-size": "^8.1.2",
     "@types/js-cookie": "^3.0.6",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@uiw/react-codemirror": "^4.23.0",
     "@vercel/analytics": "^1.3.1",
     "byte-size": "^8.1.1",
@@ -37,6 +38,7 @@
     "next": "14.2.4",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
